src/objects/Requisito__c.object
<CustomObject>
    <fields>
        <fullName>Caras__c</fullName>
        <label>Caras</label>
        <picklist>
            <picklistValues>
                <fullName>1 cara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 caras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entregable__c</fullName>
        <label>Entregable</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IdInterno__c</fullName>
        <externalId>true</externalId>
        <label>Id interno</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdTipo__c</fullName>
        <externalId>true</externalId>
        <label>Id tipo</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <globalPicklist>Nivel</globalPicklist>
        <label>Nivel</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Requisito para obtener beca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requisito para mantener beca</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requisito</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre del requisito</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requisitos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>